# cargo-zigbuild

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.windows  LICENSE  README.md  dist-workspace.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: CI.yml  Release.yml  docker.yml  pypi.yml  release.yml
docs/: bindgen.md
src/: build.rs  check.rs  cli.rs  clippy.rs  doc.rs  install.rs  lib.rs  main.rs  run.rs  rustc.rs  test.rs  zig.rs
src/linux/: mod.rs
src/macos/: install_name_tool.rs  mod.rs
tests/bindgen-exhaustive/: Cargo.toml  build.rs
tests/bindgen-exhaustive/src/: isoc.h  isocpp.hpp  lib.rs  sysdep.h
tests/fixtures/: test_aarch64.dylib  test_universal2.dylib  test_x86_64.dylib
tests/hello-aws-lc-rs/: Cargo.toml
tests/hello-aws-lc-rs/src/: main.rs
tests/hello-cmake/: Cargo.toml
tests/hello-cmake/src/: main.rs
tests/hello-rustls/: Cargo.toml
tests/hello-rustls/src/: main.rs
tests/hello-tls/: Cargo.toml
tests/hello-tls/src/: main.rs
tests/hello-windows/: Cargo.toml  build.rs
tests/hello-windows/src/: main.rs
tests/libhello/: Cargo.toml
tests/libhello/src/: lib.rs
tests/target-cpu/: Cargo.toml
tests/target-cpu/src/: main.rs
