[package]
name = "cargo-zigbuild"
version = "0.14.1"
edition = "2018"
description = "Compile Cargo project with zig as linker"
license = "MIT"
keywords = ["zig", "cargo"]
readme = "README.md"
repository = "https://github.com/messense/cargo-zigbuild"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
cargo-options = { version = "0.5.2", git = "https://github.com/oldgalileo/cargo-options", branch = "galileo/add-clippy" }
cargo_metadata = "0.15.0"
clap = { version = "4.0.0", features = ["derive", "env", "wrap_help"] }
dirs = "4.0.0"
fs-err = "2.6.0"
path-slash = "0.2.0"
rustc_version = "0.4.0"
semver = "1.0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
target-lexicon = { version = "0.12.5", features = ["std"] }
which = "4.2.5"
