[package]
name = "cargo-zigbuild"
version = "0.18.0"
edition = "2021"
description = "Compile Cargo project with zig as linker"
license = "MIT"
keywords = ["zig", "cargo"]
readme = "README.md"
repository = "https://github.com/rust-cross/cargo-zigbuild"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
cargo-options = "0.7.1"
cargo_metadata = "0.18.0"
clap = { version = "4.3.0", features = ["derive", "env", "wrap_help", "unstable-styles"] }
dirs = "5.0.0"
fat-macho = { version = "0.4.6", default-features = false, optional = true }
fs-err = "2.6.0"
path-slash = "0.2.0"
rustc_version = "0.4.0"
semver = "1.0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
shlex = "1"
target-lexicon = { version = "0.12.5", features = ["std"] }
which = "5.0.0"

[features]
default = ["universal2"]
universal2 = ["fat-macho"]
