[package]
name = "hello-rustls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = { version = "0.4.33", default-features = false, features = ["rustls", "static-curl"], optional = true }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
libz-sys = "1.1.5"
