[package]
name = "hello-tls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["native-tls-vendored"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
