[package]
name = "hello-windows"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi"] }
windows-sys = { version = "0.33.0", features = ["Win32_System_SystemInformation"] }
